--- a/casulo/src/app/rodape/rodape.component.html
+++ b/casulo/src/app/rodape/rodape.component.html
@@ -1,3 +1,10 @@
-<p>
-  rodape works!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6">
+      &copy; Todos os direitos autorais Casulo evolução
+    </div>
+    <div class="col-md-6 d-flex justify-content-end">
+      &reg; Casulo evoulução
+    </div>
+  </div>
+</div>
