--- a/casulo/src/app/progresso/progresso.component.html
+++ b/casulo/src/app/progresso/progresso.component.html
@@ -1,3 +1,3 @@
-<p>
-  progresso works!
-</p>
+<div class="progress">
+  <div class="progress-bar progress-bar-striped progress-bar-animated w-{{ progress }}" role="progressbar" >%{{ progress }}</div>
+</div>
